Segunda parte del trabajo terminada y arreglada

--- a/tienda/templates/tienda/edicion.html
+++ b/tienda/templates/tienda/edicion.html
@@ -3,27 +3,74 @@
 <head>
     <meta charset="UTF-8">
     <title>Editar Producto</title>
+    <style>
+        a{
+            cursor: pointer;
+            padding: 15px;
+            text-decoration: none;
+            color: black;
+        }
+        th{
+            padding-left: 50px;
+            text-align: center;
+            padding-bottom: 30px;
+
+        }
+        td{
+            padding-left: 50px;
+            text-align: center;
+            padding-bottom: 30px;
+        }
+    </style>
 </head>
 <body>
-    <form action="{% url 'editar' pk=produc.id %} " method="POST">
-    {% csrf_token %}
+    <div style="display: flex; align-items: center; justify-content: center">
+        <div>
+            <form action="{% url 'editar' pk=produc.id %} " method="POST">
+            {% csrf_token %}
 
-        {% for campo in formulario %}
+                {% for campo in formulario %}
+                    {% if campo.label != 'Marca' %}
+                        <h1>{{ campo.label }}</h1>
+                    {% else %}
+                        <h1>ID {{ campo.label }}</h1>
+                    {% endif %}
+                    {% for error in campo.errors %}
+                            <p style="color: red">{{ error }}</p>
+                    {% endfor %}
 
-            <h1>{{ campo.label }}</h1>
-            <input
-                    name="{{ campo.name }}"
-                    type="{{ campo.field.widget.input_type }}"
-                    placeholder="{{ campo.label }}"
-                    id="{{ campo.name }}" value="{{ campo.value }}">
-
-                {{ campo.errors }}
-                {{ campo.non_field_errors }}
-                {{ campo.non_form_errors }}
-        {% endfor %}
+                    <input
+                            name="{{ campo.name }}"
+                            type="{{ campo.field.widget.input_type }}"
+                            placeholder="{{ campo.label }}"
+                            id="{{ campo.name }}" value="{{ campo.value }}"
+                            style="height: 50px; width: 400px; font-size: 20px">
 
 
-        <input style="background-color: aqua" type="submit" value="Enviar información">
-    </form>
+                {% endfor %}
+
+                <br>
+                <input style="height: 50px; width: 400px; font-size: 20px; background-color: aqua; cursor: pointer" type="submit" value="Enviar información">
+                <a style=" background-color:#ffcb94;" href="{% url 'listado' %}">VOLVER</a>
+            </form>
+        </div>
+        <div style="margin: 20px; margin-left: 70px">
+
+            <table style="margin: 0 auto; font-size: 30px; border-left: 10px solid aliceblue">
+                <th colspan="2">Lista de Marcas</th>
+                <tr>
+                    <td>ID</td>
+                    <td>Marca</td>
+                </tr>
+                {% for post in posts %}
+                    <tr>
+                        <td>{{ post.id }}</td>
+                        <td>{{ post.nombre }}</td>
+                    </tr>
+                {% endfor %}
+            </table>
+
+        </div>
+    </div>
 </body>
 </html>
