--- a/tienda/templates/tienda/index.html
+++ b/tienda/templates/tienda/index.html
@@ -1,10 +1,36 @@
 {% extends 'tienda/base.html' %}
 
+
 {% block content %}
+
 	<h2>Bienvenido a la tienda virtual</h2>
 	<ul>
 		<li><a href="{% url 'tienda:listado' %}"> Gestión de productos </a></li>
 		<li>Informes</li>
-		<li>Realizar compra</li>
+        <li><a href="{% url 'tienda:compras' %}">Realizar compra</a></li>
 	</ul>
+    <div style="display: flex; justify-content: flex-end">
+        {% if not user.is_authenticated %}
+            <a style=" background-color:#51beff; cursor: pointer;
+                       padding: 15px;
+                       text-decoration: none;
+                       color: black;" href="{% url 'tienda:login' %}">Iniciar sesion</a>
+            <a style=" background-color:#51beff;
+                       cursor: pointer;
+                       padding: 15px;
+                       text-decoration: none;
+                       color: black;" href="{% url 'tienda:registro' %}">Registrarse</a>
+        {% else %}
+            <span style=" background-color:#51beff;
+                   cursor: pointer;
+                   padding: 15px;
+                   text-decoration: underline;
+                   color: black;">{{ user.username }}</span>
+            <a style=" background-color:#51beff;
+                   cursor: pointer;
+                   padding: 15px;
+                   text-decoration: none;
+                   color: black;" href="{% url 'tienda:loginout' %}">Cerrar sesion</a>
+        {% endif %}
+    </div>
 {% endblock %}
