--- a/tienda/templates/compras/compra.html
+++ b/tienda/templates/compras/compra.html
@@ -1,10 +1,8 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Compra</title>
+{% extends 'tienda/base.html' %}
+
+{% block content %}
         <style>
-        h1{
+        .titulo{
             text-align: center;
         }
         table{
@@ -15,47 +13,49 @@
             text-align: center;
             padding-bottom: 15px;
         }
-        a{
+        .enlace{
             cursor: pointer;
             padding: 14px;
             text-decoration: none;
             color: black;
         }
     </style>
-</head>
-<body>
-    <h1>PAGINA COMPRA</h1>
+    <h1 class="titulo">PAGINA COMPRA</h1>
 
     <form action="{% url 'tienda:compras' %}" method="get">
         <input type="text" placeholder="Buscar...." name="buscar">
         <input type="submit">
     </form>
 
-        <h1>Lista de productos</h1>
+        <h1 class="titulo">Lista de productos</h1>
         <table style="margin: 0 auto; font-size: 30px; margin-bottom: 50px; border-bottom: 3px solid #bdc2c6;">
             <tr>
-                <td>ID</td>
+
                 <td>Nombre</td>
-                <td>Marca</td>
+
                 <td>Modelo</td>
-                <td>Unidades</td>
+
                 <td>Precio</td>
-                <td>Detalles</td>
+
             </tr>
             {% for post in posts %}
                 <tr>
-                    <td>{{ post.id }}</td>
+
                     <td>{{ post.nombre }}</td>
-                    <td>{{ post.marca }}</td>
+
                     <td>{{ post.modelo }}</td>
-                    <td>{{ post.unidades }}</td>
-                    <td>{{ post.precio }}</td>
-                    <td>{{ post.detalles }}</td>
-                    <td><a href="{% url 'tienda:checkout' id=post.id %}" style=" background-color:#2fff2f;">Comprar</a></td>
+
+                    <td>{{ post.precio }} € </td>
+
+                    <td><a class="enlace" href="{% url 'tienda:checkout' id=post.id %}" style=" background-color:#2fff2f;">Carrito</a></td>
                 </tr>
 
             {% endfor %}
         </table>
-    <a style=" background-color:#ffcb94;" href="{% url 'tienda:welcome' %}">VOLVER</a>
-</body>
-</html>
+        {% if valor is True %}
+            <h1>Compra realizada exitosamente</h1>
+        {% elif valor is False %}
+            <h1>No hay suficiente stock</h1>
+        {% endif %}
+    <a class="enlace" style=" background-color:#ffcb94;" href="{% url 'tienda:welcome' %}">VOLVER</a>
+{% endblock %}
