--- a/tienda/templates/registration/registro.html
+++ b/tienda/templates/registration/registro.html
@@ -1,10 +1,7 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>REGISTRARSE</title>
+{% extends 'tienda/base.html' %}
+{% block content %}
     <style>
-        a{
+        .enlace{
             cursor: pointer;
             padding: 15px;
             text-decoration: none;
@@ -12,8 +9,7 @@
 
         }
     </style>
-</head>
-<body>
+
     <form action="{% url 'tienda:registro' %}" method="POST">
         {% csrf_token %}
         {% for log in form %}
@@ -33,14 +29,13 @@
         <button style=" background-color:#2fff2f;cursor: pointer; padding: 15px" class="btn" type="submit">REGISTRAR </button>
     </form>
 
-    <p>Si ya tienes una cuenta, pincha en <a href="{% url 'tienda:login' %}" style="background-color:#51beff;">INICIAR SESION</a></p>
+    <p>Si ya tienes una cuenta, pincha en <a class="enlace" href="{% url 'tienda:login' %}" style="background-color:#51beff;">INICIAR SESION</a></p>
     <br>
-    <a style=" background-color:#ffcb94;
+    <a class="enlace" style=" background-color:#ffcb94;
                cursor: pointer;
                padding: 15px;
                text-decoration: none;
                color: black;"
        href="{% url 'tienda:welcome' %}">VOLVER</a>
 
-</body>
-</html>
+{% endblock %}
