Reestructurado un poco el codigo y documentado

--- a/tienda/templates/tienda/edicion.html
+++ b/tienda/templates/tienda/edicion.html
@@ -47,6 +47,8 @@
 
                 {% endfor %}
 
+            <!--{{ formulario.as_div }}-->
+
                 <br>
                 <input style="height: 50px; width: 400px; font-size: 20px; background-color: aqua; cursor: pointer" type="submit" value="Enviar información">
                 <a style=" background-color:#ffcb94;" href="{% url 'tienda:listado' %}">VOLVER</a>
