--- a/tienda/templates/compras/checkout.html
+++ b/tienda/templates/compras/checkout.html
@@ -34,7 +34,8 @@
                 <li>Unidades Disponibles: {{ post.unidades }}</li>
                 <li>Precio: {{ post.precio }} € </li>
                 <li>Detalles: {{ post.detalles }}</li>
-                <li><input type="number" value="1" name="cantidad"></li>
+                <li>Unidades Solicitadas: {{ unidades }}</li>
+                <li>Costo total: {{ precio }} €</li>
                 <li><button type="submit">COMPRAR </button></li>
             </ul>
     </form>
