--- a/tienda/templates/tienda/edicion.html
+++ b/tienda/templates/tienda/edicion.html
@@ -42,7 +42,8 @@
                             placeholder="{{ campo.label }}"
                             id="{{ campo.name }}" value="{{ campo.value }}"
                             style="height: 50px; width: 400px; font-size: 20px"
-                            step="any">
+                            step="any"
+                    >
 
 
                 {% endfor %}
