--- a/tienda/templates/tienda/index.html
+++ b/tienda/templates/tienda/index.html
@@ -6,7 +6,7 @@
 	<h2>Bienvenido a la tienda virtual</h2>
 	<ul>
 		<li><a href="{% url 'tienda:listado' %}"> Gestión de productos </a></li>
-		<li>Informes</li>
+		<li><a href="{% url 'tienda:informe' %}"> Informes </a></li>
         <li><a href="{% url 'tienda:compras' %}">Realizar compra</a></li>
 	</ul>
     <div style="display: flex; justify-content: flex-end">
