--- a/tienda/templates/compras/compra.html
+++ b/tienda/templates/compras/compra.html
@@ -38,18 +38,25 @@
                 <td>Precio</td>
 
             </tr>
+
             {% for post in posts %}
-                <tr>
+                <form action="{% url 'tienda:compras'%}" method="POST">
+                {% csrf_token %}
+                    <tr>
+                        <td style="display: none"><input value="{{ post.id }}" name="id"></td>
+                        <td>{{ post.nombre }}</td>
 
-                    <td>{{ post.nombre }}</td>
+                        <td>{{ post.modelo }}</td>
 
-                    <td>{{ post.modelo }}</td>
+                        <td>{{ post.precio }} € </td>
 
-                    <td>{{ post.precio }} € </td>
+                        <td>{{ post.unidades }}</td>
 
-                    <td><a class="enlace" href="{% url 'tienda:checkout' id=post.id %}" style=" background-color:#2fff2f;">Carrito</a></td>
-                </tr>
+                        <td><input type="number" value="1" name="cantidad"></td>
 
+                        <td><button type="submit">Carrito</button></td>
+                    </tr>
+                </form>
             {% endfor %}
         </table>
         {% if valor is True %}
