--- a/tienda/templates/tienda/informes.html
+++ b/tienda/templates/tienda/informes.html
@@ -42,9 +42,63 @@
 
 
     </table>
+    <table>
 
-    <form action="{% url 'tienda:informe' %}" method="get">
+    {% for venta in ventas %}
+        <tr>
+            <td>{{ venta.producto }}</td>
+            <td>{{ venta.fecha }}</td>
+            <td>{{ venta.unidades }}</td>
+            <td>{{ venta.importe }}</td>
+            <td>{{ venta.nombre_usuario }}</td>
+        </tr>
+    {% endfor %}
+
+    </table>
 
 
+    <form action="{% url 'tienda:informe' %}" method="post">
+    {% csrf_token %}
+
+        <select name="usuario">
+          <option value="" selected></option>
+            {% for user in users %}
+              <option value="{{ user.username }}">{{ user.username }}</option>
+            {% endfor %}
+        </select>
+
+        <input type="submit">
     </form>
+    <table>
+        <tr>
+            <th>{{ eleccion }}</th>
+        </tr>
+        {% for product in usuario_compras %}
+
+                <tr>
+                    <td>{{ product.producto }}</td>
+                </tr>
+                <tr>
+                    <td>{{ product.fecha }}</td>
+                </tr>
+                <tr>
+                    <td>{{ product.unidades }}</td>
+                </tr>
+                <tr>
+                    <td>{{ product.importe }} €</td>
+                </tr>
+
+
+        {% endfor %}
+    </table>
+    <table>
+        {% for top_producto in top_productos %}
+            {% for producto in productos %}
+                {% if producto.id == top_producto.id %}
+                    <h1>{{ producto.nombre }}</h1>
+                {% endif %}
+
+            {% endfor %}
+        {% endfor %}
+    </table>
 {% endblock %}
