--- a/tienda/templates/informes/marc_product.html
+++ b/tienda/templates/informes/marc_product.html
@@ -1,10 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+{% extends 'tienda/base.html' %}
+{% block content %}
     <form action="{% url 'tienda:marc_product' %}" method="get">
 
         <select name="menu">
@@ -44,5 +39,4 @@
 
 
     </table>
-</body>
-</html>
+{% endblock %}
