--- a/tienda/templates/informes/top_productos.html
+++ b/tienda/templates/informes/top_productos.html
@@ -1,22 +1,14 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+{% extends 'tienda/base.html' %}
+{% block content %}
+
     <table>
+        {% for venta in ventas %}
+            {% for producto in productos %}
+                {% if producto.id == venta.id %}
+                    <h1>{{ producto.nombre }}</h1>
+                {% endif %}
 
-    {% for venta in ventas %}
-        <tr>
-            <td>{{ venta.producto }}</td>
-            <td>{{ venta.fecha }}</td>
-            <td>{{ venta.unidades }}</td>
-            <td>{{ venta.importe }}</td>
-            <td>{{ venta.nombre_usuario }}</td>
-        </tr>
-    {% endfor %}
-
+            {% endfor %}
+        {% endfor %}
     </table>
-</body>
-</html>
+{% endblock %}
