--- a/tienda/templates/informes/top_clientes.html
+++ b/tienda/templates/informes/top_clientes.html
@@ -2,11 +2,18 @@
 {% block content %}
 <p>TOP 10 USUARIOS!!!!</p>
 
-    <table>
+    <table class="table table-striped">
+        <tr>
+            <th> Usuario </th>
+            <th> Precio Gastado </th>
+        </tr>
         {% for user in users %}
             {% for venta in ventas %}
-                {% if venta.nombre_usuario == user.username %}
-                    <h1>{{ user.username }}</h1>
+                {% if venta.nombre_usuario_id == user.id %}
+                    <tr>
+                        <td>{{ user.username }}</td>
+                        <td>{{ venta.dcount }} €</td>
+                    </tr>
                 {% endif %}
 
             {% endfor %}
